--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME="OnlineTrader"
+APP_NAME="Pipsbulls"
 APP_ENV=local
 APP_KEY=base64:pGwNRHBYg+/GuUZ6N9GSfb+cFrCED+0t0yjl+E7OI0g=
 APP_DEBUG=true
-APP_URL=https://yourdomain.com
+APP_URL=https://pipbulls.com
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=pips
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=leeriwvp_pipsbulls
+DB_USERNAME=leeriwvp_leereal
+DB_PASSWORD=mutabvuri$8
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
