--- a/.envlocal.txt
+++ b/.envlocal.txt
@@ -2,7 +2,7 @@ APP_NAME="Pipsbulls"
 APP_ENV=local
 APP_KEY=base64:pGwNRHBYg+/GuUZ6N9GSfb+cFrCED+0t0yjl+E7OI0g=
 APP_DEBUG=true
-APP_URL=https://pipbulls.com
+APP_URL=https://localhost/pips
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=leeriwvp_pipsbulls
-DB_USERNAME=leeriwvp_leereal
-DB_PASSWORD=mutabvuri$8
+DB_DATABASE=pips
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -25,15 +25,6 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=ddfaa7acd5deaba
-MAIL_PASSWORD=2f55a3cd6275a
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
